# ChangeLog for games-arcade/pengupop
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/pengupop/ChangeLog,v 1.16 2009/12/05 17:48:07 mr_bones_ Exp $

*pengupop-2.2.5 (05 Dec 2009)

  05 Dec 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +pengupop-2.2.5.ebuild:
  version bump

  22 Jun 2008; Markus Meier <maekke@gentoo.org> pengupop-2.2.3.ebuild:
  x86 stable, bug #227649

  19 Jun 2008; nixnut <nixnut@gentoo.org> pengupop-2.2.3.ebuild:
  Stable on ppc wrt bug 227649

  25 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> pengupop-2.2.3.ebuild:
  amd64 stable

*pengupop-2.2.3 (25 Oct 2007)

  25 Oct 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +pengupop-2.2.3.ebuild:
  version bump

  09 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  pengupop-2.2.2.ebuild:
  stable for x86; clean out older ebuild

*pengupop-2.2.2 (22 Jan 2007)

  22 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +pengupop-2.2.2.ebuild:
  version bump

*pengupop-2.2.1 (19 Jan 2007)

  19 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +pengupop-2.2.1.ebuild:
  version bump

  25 Oct 2006; Tristan Heaven <nyhm@gentoo.org> pengupop-2.1.9.ebuild:
  ~amd64 the new version as well, bug #152625

  24 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> pengupop-2.1.8.ebuild:
  Marked ~amd64 for bug #152602

*pengupop-2.1.9 (23 Oct 2006)

  23 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +pengupop-2.1.9.ebuild:
  version bump

*pengupop-2.1.8 (12 Oct 2006)

  12 Oct 2006; Tristan Heaven <nyhm@gentoo.org> +pengupop-2.1.8.ebuild:
  Version bump

*pengupop-2.1.6 (22 Aug 2006)

  22 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +pengupop-2.1.6.ebuild:
  version bump

  15 Aug 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  pengupop-2.1.4.ebuild:
  mark ~ppc, thanks to Henrique Rodrigues (Bug #143997)

*pengupop-2.1.4 (13 Aug 2006)

  13 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +pengupop-2.1.4.ebuild: