@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST pengupop-2.2.3.tar.gz 1666957 RMD160 af02835ba6350ed68d90ce1b13a0cb423a89510b SHA1 65d7e237438a91f8ddf6fd8f8f5a43515daeb11f SHA256 fb7d865fb9c0554354659372010f30c868b5a41e70c9d357644aa6ede21b2478
 DIST pengupop-2.2.5.tar.gz 1676224 RMD160 b7b8a0f4d5d09d99c53d4eab4b043408bfb6834d SHA1 596689396bd55c093c8057240808c3701445aec0 SHA256 dd70f731ea0eeb83556359ebbfc70054832a56656638437ef9bf5aab8d72fa25
 EBUILD pengupop-2.2.3.ebuild 785 RMD160 0c2cc011ce9561c3487fff51189e1ed7a37e0ef0 SHA1 ee3a1cccef143fa0ab110258fe892f4e294a5274 SHA256 80f79254af2f1698e1c0b290eb1dcd5954990b270ce321223174161345694ef4
-EBUILD pengupop-2.2.5.ebuild 803 RMD160 cc22947770340b0bbc55c2f5f362a89b7a6b6aff SHA1 cc1d39668f59eb57824b16dcdaea7e21a474be57 SHA256 8df5832da3828061103d1721cbed23e51ac38b4339607c44422d3cc9a0ea388d
-MISC ChangeLog 2208 RMD160 5c18643ced6d0d1eca5ba7f03990198630638807 SHA1 7ae61eed69fffecd92e618a33603e923678864c2 SHA256 fab5e5b1c53ae58373407cd4106acc2ac8e7b50fc8c15881c33c06143f999b19
+EBUILD pengupop-2.2.5.ebuild 799 RMD160 f00f3fbea58094decbfec61214ede65ecdfba04b SHA1 129dc3b851a19d772172809e13b344f9ef68510d SHA256 193a871bd6b2418fceade6cff370690e71ab765302ee75f29f6b2eef44f1cea4
+MISC ChangeLog 2314 RMD160 e9ecc1cbd48433f5c0d3fefa761bc97f5602c34b SHA1 f54db730440d049bf5821f1746fa2ee31594a229 SHA256 767d7dbd3d66e761f1d10f52a527689769b5554f376977c1b1f6b51838675467
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAktGG/AACgkQcsIHjyDViGTdWgCgqF6Duw4SoRcGy5BhJvp6ur+i
+wqIAoJQPTnvVH+4sMvqY+QgC6LUTPSiZ
+=38F+
+-----END PGP SIGNATURE-----
